artifacthub/library/general/allowedreposv2/1.0.0/samples/repo-must-be-openpolicyagent/disallowed_all.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-disallowed
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
      securityContext:
        allowPrivilegeEscalation: false
  ephemeralContainers:
    - name: nginx
      image: nginx
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
      securityContext:
        allowPrivilegeEscalation: false
