artifacthub/library/general/allowedreposv2/1.0.0/samples/repo-must-be-openpolicyagent/example_allowed_images.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-allowed
spec:
  containers:
    - name: image
      image: ubuntu:20.14
      securityContext:
        allowPrivilegeEscalation: false
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
