artifacthub/library/general/allowedreposv2/1.0.0/samples/repo-must-be-openpolicyagent/example_disallowed_initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-disallowed
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      securityContext:
        allowPrivilegeEscalation: false
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
